[package]
name = "sbproxy-model-host"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish = false
description = "Local model-serving subsystem for sbproxy: model catalog, GPU fit planner, and engine supervisor (WOR-1652). Single-node, engine-agnostic, hardware-independent core."

[features]
default = ["tokenizer"]
# Real NVIDIA GPU discovery via NVML (runtime dlopen, no CUDA toolkit at
# build time). Off by default at the crate level so library builds stay
# lean; the `sbproxy` binary enables it by default, which is safe
# everywhere because NVML is dlopen'd at runtime and a host without the
# driver just probes zero GPUs.
gpu-nvidia = ["dep:nvml-wrapper"]
# Apple Silicon (Metal) GPU discovery for the fit planner (WOR-1800).
# Reports unified memory as the serving budget so a Mac admits models
# that fit. Reads sysctl keys via the sysctlbyname(3) syscall with a CLI
# fallback (WOR-1829); the module only compiles on macOS. Off by default
# at the crate level; the `sbproxy` binary enables it by default,
# harmless on non-Apple hosts where the CPU probe answers instead.
gpu-apple = []
# Hugging Face weight download. Off by default at the crate level;
# enabled by default in the `sbproxy` binary.
weights = ["dep:reqwest"]
# Accurate token counting (against a model's own tokenizer.json) and
# chat-template rendering (WOR-1671). On by default at the crate level:
# encoding a fixed tokenizer.json is deterministic, so unlike the other
# optional features here there is no reason to make callers opt in, and
# both `tokenizers` and `minijinja` are already default dependencies
# elsewhere in the workspace (classifiers / ai / modules) at these same
# versions, so this adds no new lock deps. Budgets and context-fit
# previously had to fall back to a length-based heuristic for want of
# this one flag; with it on, local-model callers get an exact count.
tokenizer = ["dep:tokenizers", "dep:minijinja"]
# In-process embedded engine (WOR-1658): runs a model inside the gateway
# with no subprocess, for a single-binary / zero-external-engine deploy.
# Off by default. Backed by mistral.rs (Gemma, Qwen, Llama, ...) served
# over a loopback OpenAI endpoint via axum, so the runtime routes to it
# exactly like a subprocess engine. mistral.rs is a large dependency
# tree (candle etc.), so it is strictly opt-in and absent from the
# default build + the lean lockfile path.
embedded = ["dep:mistralrs", "dep:axum"]

[dependencies]
sbproxy-util.workspace = true
sbproxy-config.workspace = true
sbproxy-security.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_canonicalizer = { workspace = true }
serde_yaml = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = "2"
fs2 = { workspace = true }
async-trait = { workspace = true }
arc-swap = { workspace = true }
bytes = { workspace = true }
zeroize = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
url = { workspace = true }
nvml-wrapper = { version = "0.10", optional = true }
# Weight download is a plain HTTP GET that follows HF's redirect to the
# resolve-cache/Xet backend; reqwest's default redirect policy resolves
# the relative Location the hub returns, which the old hf-hub 0.3 client
# could not. No hf-hub dependency.
reqwest = { workspace = true, optional = true }
# Token counting + chat-template rendering, behind the `tokenizer`
# feature. Versions match the existing workspace users (classifiers /
# extension) so no new lock entries are pulled.
tokenizers = { version = "0.20", optional = true, default-features = false, features = ["onig"] }
minijinja = { workspace = true, optional = true }
# WOR-1658 embedded engine (feature `embedded`). Large dep tree; opt-in only.
# WOR-1861: pinned to the v0.9.0 git tag because crates.io still serves 0.8.1.
# 0.9 brings PagedAttention default-on for CUDA, CUDA graphs, FlashInfer, and
# prebuilt release binaries; re-pin to a crates.io version once 0.9 publishes.
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs", tag = "v0.9.0", optional = true }
axum = { version = "0.8", optional = true }

# WOR-1829: the GPU/RAM probes read sysctl keys via the sysctlbyname(3)
# syscall so they work inside sandboxes that block spawning the `sysctl`
# binary. libc is already in the lockfile transitively (tokio, pingora).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
sbproxy-ai.workspace = true
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
