[package]
name = "sbproxy-modules"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish = false

# --- AI Governance feature flags ---
#
# Library consumers opt in. The `sbproxy` binary turns these on via its own
# `default` feature set so end users get the full governance surface out of
# the box.
# See docs/AIGOVERNANCE-BUILD.md for the gating strategy.
#
# flags (each gates a real implementation):
# - tiered-pricing : multi-tier pricing in `policy/ai_crawl.rs`
# - http-ledger : HTTP ledger client in `policy/ai_crawl.rs`
# - agent-class : agent-class resolver chain
#
# flags (default-on; off-mode strips the surface for operators
# who want a minimal binary):
# - content-negotiate : the `content_negotiate` action
# - licensing-rsl : the `/licenses.xml` projection
# - licensing-tdmrep : the `/.well-known/tdmrep.json` projection
# - llms-txt : the `llms.txt` + `llms-full.txt` projections
#
# The flags are default-on so the existing default build keeps
# working unchanged. Operators that want a stripped binary disable
# `default-features` and re-enable only the flags they need.
[features]
default = ["content-negotiate", "licensing-rsl", "licensing-tdmrep", "llms-txt"]
tiered-pricing = []
http-ledger = []
# Enables the `policy::agent_class` resolver. Pulls the
# `agent-class` feature on `sbproxy-security` so the reverse-DNS
# verifier is available to the resolver chain.
agent-class = ["sbproxy-security/agent-class"]
# Marker flag for the `content_negotiate` action. Code
# is unconditionally compiled today; the flag exists so a future
# stripped-binary build can `#[cfg]` it out without touching the
# action's call sites.
content-negotiate = []
# Marker flag for the `/licenses.xml` (RSL 1.0)
# projection. Same compile-everywhere-for-now contract as
# `content-negotiate`.
licensing-rsl = []
# Marker flag for the `/.well-known/tdmrep.json` (W3C
# TDMRep) projection. Same contract as `licensing-rsl`.
licensing-tdmrep = []
# Marker flag for the `llms.txt` + `llms-full.txt`
# projections. Same contract as `licensing-rsl`.
llms-txt = []
# A2A protocol envelope parsers. Detection and policy
# enforcement run with these flags off (the proxy treats matched
# requests as plain POSTs and applies route limits without parsed
# fields). Each flag opts in one draft; the convenience `a2a` flag
# enables both.
a2a-anthropic = []
a2a-google = []
a2a = ["a2a-anthropic", "a2a-google"]

[dependencies]
sbproxy-plugin.workspace = true
sbproxy-config.workspace = true
sbproxy-middleware.workspace = true
sbproxy-extension.workspace = true
sbproxy-ai.workspace = true
sbproxy-transport.workspace = true
sbproxy-security.workspace = true
# WOR-892 PR1 step 2/3: CBOR encoder for sealed OIDC session cookies.
ciborium.workspace = true
sbproxy-cache.workspace = true
sbproxy-platform.workspace = true
sbproxy-classifiers.workspace = true
sbproxy-classifier-client.workspace = true
sbproxy-observe.workspace = true
prometheus.workspace = true

arc-swap.workspace = true
bytes.workspace = true
compact_str.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
url.workspace = true
http.workspace = true
anyhow.workspace = true
base64.workspace = true
ring.workspace = true
ipnetwork.workspace = true
percent-encoding.workspace = true
regex.workspace = true
minijinja.workspace = true
pulldown-cmark.workspace = true
tracing.workspace = true
md-5 = "0.10"
sha2.workspace = true
hex.workspace = true
# HMAC-SHA256 for the WAF rule-feed signature verification path
# and the HTTP ledger client request signing.
hmac.workspace = true
# Ed25519 for the quote-token JWS signer / verifier.
# Pinned to 2.x to match the resolved version in sbproxy-middleware
# and sbproxy-observe so the workspace builds with one copy.
ed25519-dalek = "2"
# ULID for ledger Idempotency-Key + envelope request_id.
ulid.workspace = true
# UUID for the CompiledPolicy identifiers in the NL policy compiler
# pipeline (WOR-203 PR 3a).
uuid = { workspace = true }
# Strongly typed LedgerError variants.
thiserror.workspace = true
parking_lot.workspace = true
jsonwebtoken.workspace = true
jsonschema.workspace = true
dashmap.workspace = true
rand.workspace = true
# Used by the prompt-injection v2 detector registry and the
# RoutingStrategy plugin registry. Already a workspace dep used by
# sbproxy-plugin and sbproxy-core; no new third-party dep.
inventory.workspace = true
lru = "0.16"

# Needed for spawn_blocking when calling sync KVStore methods (Redis rate limiting).
# Also: rt + time for active health-check probe loops on load_balancer targets.
# rt-multi-thread is used by the dedicated plugin-transform runtime
# (transform/mod.rs) so a panicking or slow plugin future is isolated
# from the Pingora worker that called the response filter (WOR-168).
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "time", "macros"] }

# Active health-check probes (GETs against target URLs in a background task).
# Blocking feature also used to load remote bulk-redirect lists at config compile.
reqwest = { workspace = true, features = ["blocking"] }

# Object storage backends (S3, GCS, Azure, local) for the storage action.
object_store = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }

# Background task lifecycle for the WAF rule-feed subscriber. Mirrors the
# pattern used in sbproxy-core's WEBHOOK_TASKS / CACHE_REVALIDATE_TASKS so
# graceful shutdown drains the polling / XREAD loop deterministically.
tokio-util = { workspace = true }

# Async Redis client driven directly so the WAF feed subscriber can call
# XREAD with BLOCK; the AsyncKVStore facade in sbproxy-platform only
# exposes GET/SET-shaped operations.
redis = { workspace = true }
sbproxy-vault = { version = "0.1.0", path = "../sbproxy-vault" }

# WOR-194: archive parsing for the Agent Skills v0.2.0 projection.
# `tar` plus `flate2` cover `.tar.gz` bundles; `zip` covers `.zip`.
# The parser is defensive: it caps decompression ratio, entry count,
# and expanded byte budget per the spec's archive-safety contract.
tar = "0.4"
flate2 = "1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
smallvec.workspace = true
tempfile = "3"
tokio = { workspace = true, features = ["full", "test-util"] }
proptest.workspace = true
