[package]
name = "sbproxy-observe"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish = false

[dependencies]
sbproxy-plugin.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
prometheus.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
uuid.workspace = true
ulid.workspace = true
regex.workspace = true
http.workspace = true
once_cell = "1"
rand.workspace = true
reqwest = { workspace = true }
tokio.workspace = true
chrono.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
thiserror.workspace = true

# R1.4 outbound webhook framework: Ed25519 signing (preferred) with
# HMAC-SHA256 fallback (per adr-webhook-security.md). Already used in
# sbproxy-middleware; share the version.
ed25519-dalek = "2"

# OpenTelemetry OTLP export pipeline. Pinned together: each
# opentelemetry sub-crate version must align across the SDK,
# protocol, and tracing bridge. We use the HTTP / proto-encoded
# transport rather than gRPC to avoid pulling in tonic again.
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.27", features = ["http-proto", "reqwest-client", "grpc-tonic", "trace"] }
opentelemetry-semantic-conventions = "0.27"
tracing-opentelemetry = "0.28"
