[package]
name = "sbproxy-observe"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish = false

[dependencies]
sbproxy-plugin.workspace = true
# SSRF guard for alert webhook URLs (WOR-604). No cycle: sbproxy-security
# does not depend on sbproxy-observe.
sbproxy-security.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
prometheus.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
# `serde` is on so PolicyVerdictEvent and other typed events can
# (de)serialise the UUID without an intermediate string conversion.
uuid = { workspace = true, features = ["v4", "serde"] }
ulid.workspace = true
regex.workspace = true
http.workspace = true
once_cell = "1"
parking_lot.workspace = true
rand.workspace = true
reqwest = { workspace = true }
tokio.workspace = true
# TaskTracker drains in-flight alert webhook deliveries on shutdown (WOR-652).
tokio-util.workspace = true
# `serde` is on so PolicyVerdictEvent.occurred_at can (de)serialise
# the timestamp directly without a custom adapter.
chrono = { workspace = true, features = ["serde"] }
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
thiserror.workspace = true
flate2 = "1"

# R1.4 outbound webhook framework: Ed25519 signing (preferred) with
# HMAC-SHA256 fallback. Already used in
# sbproxy-middleware; share the version.
ed25519-dalek = "2"

# OpenTelemetry OTLP export pipeline. Pinned together: each
# opentelemetry sub-crate version must align across the SDK,
# protocol, and tracing bridge. We use the HTTP / proto-encoded
# transport rather than gRPC to avoid pulling in tonic again.
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.27", features = ["http-proto", "reqwest-client", "grpc-tonic", "trace"] }
opentelemetry-semantic-conventions = "0.27"
tracing-opentelemetry = "0.28"

[dev-dependencies]
tempfile = "3"
