[package]
name = "sbproxy-openapi"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish = false

[dependencies]
sbproxy-config.workspace = true

# HTTP method enum for emitting per-method operations
http.workspace = true

# Plugin registry for enterprise-supplied auth scheme mappers
inventory.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
compact_str.workspace = true
smallvec.workspace = true
