[package]
name = "sbproxy-platform"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish = false

[features]
default = ["redb-store", "sqlite-store"]
redb-store = ["dep:redb"]
sqlite-store = ["dep:rusqlite"]

[dependencies]
sbproxy-plugin.workspace = true
anyhow.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
base64.workspace = true
dashmap.workspace = true
parking_lot.workspace = true

# Blocking HTTP client for SQS and GCP Pub/Sub backends
ureq = { version = "2", features = ["json"] }

# Async runtime bridge. `rt` supports spawn_blocking for sync backends;
# `macros`+`net` are required by the async Redis client (AsyncRedisKVStore).
tokio = { workspace = true, features = ["rt", "macros", "sync", "net"] }
# Redis client for validated connection config and AsyncRedisKVStore, including
# rustls for `rediss://`.
redis = { workspace = true, features = ["connection-manager", "tokio-rustls-comp"] }
async-trait = { workspace = true }
prometheus = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

# Optional storage backends
redb = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }

[dev-dependencies]
rcgen = { workspace = true }
tempfile = "3"
