[package]
name = "sbproxy-plugin"
# 0.1 -> 0.2: breaking change to the plugin trait API (WOR-620) -- trait
# methods now return PluginError instead of anyhow::Error. 0.x breaking
# changes bump the minor per semver.
version = "0.2.0"
edition = "2021"
license.workspace = true
publish = false

[dependencies]
inventory = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
compact_str = { workspace = true }
# `url` is the type behind `PolicyDecision::Confirm::webhook_url`
# (added per docs/adr-policy-verdict-shape.md, WOR-147 / WOR-201
# Phase 0). `chrono` is the type behind `expires_at`; the `serde`
# feature is on so the audit-event work in WOR-201 PR 1c can
# (de)serialise the timestamp without a second feature bump.
url = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
