# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 Soap Bucket LLC

[package]
name = "sbproxy-storage-mesh"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Mesh-backed storage adapter (EphemeralKv + PubSub) over the OSS sbproxy mesh distributed cache."

[dependencies]
# Trait surface, error helpers, and metrics. The Redis backend comes in
# transitively via sbproxy-mesh; this crate only uses the always-on traits.
sbproxy-storage = { workspace = true }
sbproxy-mesh = { workspace = true }

async-trait = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
prometheus = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
