[package]
name = "sbproxy-transport"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish = false

[dependencies]
sbproxy-plugin.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
bytes.workspace = true
tokio.workspace = true
http.workspace = true
reqwest.workspace = true
tracing.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
