[package]
name = "sbproxy-vault"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
sbproxy-observe.workspace = true
serde_json.workspace = true
base64.workspace = true
ring.workspace = true
hex.workspace = true
parking_lot.workspace = true
# `thiserror` is the error backing for the `vault://` URI parser.
# Already a workspace dep; opting in here so the `#[derive(Error)]`
# resolves.
thiserror = { workspace = true }
# `spawn_blocking` for the async file-resolver wrapper.
tokio = { workspace = true, features = ["rt"] }

# Blocking HTTP client for HashiCorp Vault, AWS KMS, and GCP Cloud KMS backends
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tempfile = "3"
