[package]
name = "sbproxy-vault"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
sbproxy-observe.workspace = true
serde_json.workspace = true
base64.workspace = true
ring.workspace = true
hex.workspace = true
parking_lot.workspace = true
# `thiserror` is the error backing for the `vault://` URI parser.
# Already a workspace dep; opting in here so the `#[derive(Error)]`
# resolves.
thiserror = { workspace = true }
# `spawn_blocking` for the async file-resolver wrapper.
tokio = { workspace = true, features = ["rt"] }

# Blocking HTTP client for HashiCorp Vault, AWS KMS, and GCP Cloud KMS backends
ureq = { version = "2", features = ["json"] }

# AWS SDK: Secrets Manager backend uses the official SDK so the
# default credential chain (env / instance-profile / SSO / SSO+role)
# and STS-assumed roles are supported without re-implementing sigv4.
# `rustls` feature pinned so we link against the same TLS stack the
# rest of the workspace uses.
aws-config = { version = "1", default-features = false, features = ["rt-tokio", "rustls", "behavior-version-latest"] }
aws-sdk-secretsmanager = { version = "1", default-features = false, features = ["rt-tokio", "rustls", "behavior-version-latest"] }
aws-sdk-sts = { version = "1", default-features = false, features = ["rt-tokio", "rustls", "behavior-version-latest"] }
aws-credential-types = { version = "1" }
aws-types = { version = "1" }

# Kubernetes Secrets backend uses the official `kube` client. `client`
# enables the Kubernetes API client; `rustls-tls` keeps us off OpenSSL.
# Version pinned to match the sbproxy-k8s-operator crate so the same
# k8s-openapi target Kubernetes API version applies workspace-wide.
kube = { version = "0.95", default-features = false, features = [
    "client",
    "rustls-tls",
] }
# rustls 0.23 (pulled transitively by `kube` 0.95) requires a process-
# global CryptoProvider to be installed before any TLS handshake. We
# install `ring` at backend construction; pinning the dep here makes
# the install path discoverable from the call site.
rustls = { version = "0.23", default-features = false, features = ["ring"] }
k8s-openapi = { version = "0.23", default-features = false, features = ["v1_30"] }

[dev-dependencies]
tempfile = "3"
